# newcli

./: .gitignore  BUG_AUDIT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MERA_KAAM.md  README.md  SECURITY.md  USAGE_GUIDE.md  clean.py  plan.md  task.md  testplan.md
.github/workflows/: ci.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: builtin.rs  lib.rs  orchestrator.rs  tools.rs
crates/agent-types/: Cargo.toml
crates/agent-types/src/: error.rs  event.rs  lang.rs  lib.rs  message.rs  tool.rs
crates/apply-engine/: Cargo.toml
crates/apply-engine/src/: apply_engine.rs  crdt_doc.rs  fast_apply.rs  ipc.rs  lazy_edit.rs  lib.rs  semantic_diff.rs
crates/compaction/: Cargo.toml
crates/compaction/src/: compactor.rs  config.rs  lib.rs  token_count.rs
crates/evals/: Cargo.toml
crates/evals/src/: lib.rs  report.rs  swebench.rs  trajectory.rs
crates/harness/: Cargo.toml
crates/harness/src/: hooks.rs  lang_guard.rs  lib.rs  skills.rs  subagent.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: chunker.rs  entity.rs  lib.rs  merkle.rs  parser.rs  scope_tree.rs
crates/llm-client/: Cargo.toml
crates/llm-client/examples/: test_gemini.rs
crates/llm-client/src/: anthropic.rs  embeddings.rs  gemini.rs  lib.rs  openai_compat.rs  provider.rs  sse.rs
crates/lsp-client/: Cargo.toml
crates/lsp-client/src/: client.rs  diagnostics.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  lib.rs  schema.rs  server.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: event_bus.rs  lib.rs  scheduler.rs  task_scope.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: executor.rs  lib.rs  net_guard.rs  path_jail.rs
crates/spec-pipeline/: Cargo.toml
crates/spec-pipeline/src/: artifacts.rs  lib.rs  stages.rs
crates/state-store/: Cargo.toml
crates/state-store/src/: ephemeral.rs  history.rs  lib.rs  persistent.rs
crates/vecstore/: Cargo.toml
crates/vecstore/src/: hybrid.rs  lib.rs  schema.rs  store.rs
