[package]
name = "evals"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
agent-core = { path = "../agent-core" }
runtime-core = { path = "../runtime-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["fs", "sync", "time", "macros", "rt"] }
tokio-util = { workspace = true }
toml = "0.8"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
