[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
runtime-core = { path = "../runtime-core" }
llm-client = { path = "../llm-client" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt"] }
tokio-util = { workspace = true }
regex = "1"
toml = "0.8"
