[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
runtime-core = { path = "../runtime-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
sha2 = "0.10"
walkdir = "2"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
