[package]
name = "llm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
tokio-util = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }

[[example]]
name = "test_gemini"
required-features = []
