[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
runtime-core = { path = "../runtime-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["process", "io-util", "sync", "time", "macros", "rt"] }
dashmap = "6"
