[package]
name = "mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
runtime-core = { path = "../runtime-core" }
sandbox = { path = "../sandbox" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["process", "io-util", "sync", "macros", "rt"] }
tokio-util = { workspace = true }
