[package]
name = "spec-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
runtime-core = { path = "../runtime-core" }
llm-client = { path = "../llm-client" }
sandbox = { path = "../sandbox" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["fs", "sync"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
