[package]
name = "state-store"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-types = { path = "../agent-types" }
runtime-core = { path = "../runtime-core" }
sandbox = { path = "../sandbox" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["fs"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
